bug: fixed extra padding on container

--- a/frontend/src/components/aboutus/aboutUs.css
+++ b/frontend/src/components/aboutus/aboutUs.css
@@ -1,3 +1,7 @@
+#dja_main {
+    padding: 0;
+}
+
 .dja_container {
     width: 90%;
     max-width: 1200px;
@@ -41,9 +45,12 @@
     z-index: 3;
     display: grid;
     place-items: center;
-    color: #fff;
     font-size: 24px;
     font-weight: 500;
+}
+
+#banner_title > h1 {
+    color: #fff;
 }
 #banner_title h1 span {
     color: #D1C6F6;
